5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1800_2571.log
== SUBMITION (2019-06-12 19:50:47) 
-- CODE:
s= input("str")
ss=''
for i in range(len(s)):
	if s[i]=="a" or s[i]=="A"
		i=i
	else:
		ss=ss+s[i]
print(ss)
-- EXECUTION TIME:
0.872432
-- ERROR:
  File "/home/codebench/codes/1800/2571/main.py", line 4
    if s[i]=="a" or s[i]=="A"
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:51:09) 
-- CODE:
s= input("str")
ss=''
for i in range(len(s)):
	if (s[i]=="a" or s[i]=="A"):
		i=i
	else:
		ss=ss+s[i]
print(ss)
-- EXECUTION TIME:
0.760335
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
